# simple-drag-drop

./: CMakeLists.txt  README.md  dragdropitemmodel.cpp  dragdropitemmodel.h  main.cpp
